[tool.poetry]
name = "hass-findmy"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.14"
homeassistant = "^2024.10.4"
findmy = "0.7.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pre-commit = "^4.0.1"
pyright = "^1.1.381"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN002", # annotations on `*args`
    "ANN003", # annotations on `**kwargs`
    "ANN101", # annotations on `self`
    "ANN102", # annotations on `cls`

    "D"  # Documentation
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
