[project]
name = "hass-findmy"
version="0.0.1"
package-mode = false
requires-python = ">=3.12,<3.13"
dependencies = [
    "homeassistant>=2024.12.5",
    "findmy>=0.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "ANN002", # annotations on `*args`
    "ANN003", # annotations on `**kwargs`

    "D"  # Documentation
]
