[project]
name = "hass-findmy"
version = "0.0.1"
requires-python = ">=3.13.2,<3.14"
dependencies = ["homeassistant>=2025.10.2", "findmy>=0.9.4"]

[dependency-groups]
dev = ["basedpyright>=1.31.7", "pre-commit>=4.3.0", "ruff>=0.14.0"]

[tool.pyright]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", # annotations on `*args`
    "ANN003", # annotations on `**kwargs`

    "S101", # assert

    "D", # Documentation
]
